--- a/worlds/.gitignore
+++ b/worlds/.gitignore
@@ -11,3 +11,23 @@ SoloWorld.db.old
 SoloWorld.fwl
 SoloWorld.fwl.old
 steam_autocloud.vdf
+FarmingLand.db
+FarmingLand.db.old
+FarmingLand.fwl
+FarmingLand.fwl.old
+GoribDesh.db
+GoribDesh.db.old
+GoribDesh.fwl
+GoribDesh.fwl.old
+NotunJogot.db
+NotunJogot.db.old
+NotunJogot.fwl
+NotunJogot.fwl.old
+Ragner111.db
+Ragner111.db.old
+Ragner111.fwl
+Ragner111.fwl.old
+Valhalla.db
+Valhalla.db.old
+Valhalla.fwl
+Valhalla.fwl.old
