--- a/worlds/.gitignore
+++ b/worlds/.gitignore
@@ -35,3 +35,12 @@ Valheim.db
 Valheim.db.old
 Valheim.fwl
 Valheim.fwl.old
+dasasd
+dasasd.db.old
+dasasd.fwl
+dasasd.fwl.old
+DotoBoyz
+DotoBoyz.db.old
+DotoBoyz.fwl
+DotoBoyz.fwl.old
+
