--- a/worlds/.gitignore
+++ b/worlds/.gitignore
@@ -35,12 +35,27 @@ Valheim.db
 Valheim.db.old
 Valheim.fwl
 Valheim.fwl.old
-dasasd
+dasasd.db
 dasasd.db.old
 dasasd.fwl
 dasasd.fwl.old
-DotoBoyz
+DotoBoyz.db
 DotoBoyz.db.old
 DotoBoyz.fwl
 DotoBoyz.fwl.old
+Brotherhood.db
+Brotherhood.db.old
+Brotherhood.fwl
+Brotherhood.fwl.old
+Chosha.db
+Chosha.db.old
+Chosha.fwl
+Chosha.fwl.old
+HODAKA.db
+HODAKA.db.old
+HODAKA.fwl
+HODAKA.fwl.old
+IngloriousBuster.fwl.old
+
+
 
